--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Den</title>
     <link data-trunk rel="css" href="styles.css" />
     <link data-trunk rel="copy-dir" href="public" />
+    <link data-trunk rel="copy-dir" href="src-tauri/resources/" />
     <link data-trunk rel="rust" data-wasm-opt="z" />
   </head>
   <body></body>
